@startuml


package app{
class Restaurante
}

package controller{
    class PedidoController{
        pedidoController()
        agregarPedido(Pedidos pedido, DetallePedido detallePedido)
        obtenerPedido(int id)
        listarPedidos()
        }

    class PlatoController{
        platoController()
        agregarPlato(Platos plato)
        actualizarPlato(Platos plato)
        eliminarPlato(int id)
        }
    class ClienteController{
        ClienteController()
        agregarCliente(Cliente cliente)
        obtenerCliente(int id)
        editarCliente(Cliente cliente)
        eliminarCliente(int id)
        }
}

package model{
    class Cliente{
        + id
        + nombre
        + apellido
        ---
        Getters and Setters
    }
    class DetallePedido{
        + id
        + nombre
        + precio
        + cantidad
        + comentario
        + id_pedido
        ---
        Getters and Setters
    }
    class Pedidos{
        + id
        + num_mesa
        + fecha
        + total
        + usuario
        + estado
        ---
        Getters and Setters
    }
    class Platos{
        + id
        + nombre
        + precio
        + fecha
        ---
        Getters and Setters
    }
}

package persistence{
        class ClienteDAO{
            + ClienteDAO()
            + agregarCliente(Cliente cliente)
            + obtenerCliente(int id)
            + modificarCliente(Cliente cliente)
            + eliminarCliente(int id)
        }
        class Conexion{
            + Conexion()
            + getInstance()
            + getConnection()
            + closeConnection()
            + printDatabaseName()
            + connect()
        }
        class PedidosDAO{
            + PedidosDAO()
            + IdPedido()
            + RegistrarPedido(Pedidos ped)
            + RegistrarDetalle(DetallePedido det)
            + verPedido(int id_pedido)
            + verPedidoDetalle(int id_pedido)
            + listarPedidos()
        }
        class PlatosDAO{
            + PlatosDAO()
            + IdPlato()
            + insertarPlato(Platos plato)
            + actualizarPlato(Platos plato)
            + eliminarPlato(int idPlato)
        }
    }

    package view{
        class Sistema{
            + Sistema()
            + initComponents()
        }
    }

Pedidos " One " *-- " Many " DetallePedido
Pedidos " One " --> " Many " Cliente
PedidoController ..> Pedidos
PedidoController --> PedidosDAO : DAO
PedidoController ..> Cliente
PlatoController ..> Platos
PlatoController --> PlatosDAO : DAO
ClienteController --> ClienteDAO : DAO
ClienteDAO ..> Conexion :  Singleton
PedidosDAO ..> Conexion :  Singleton
PlatosDAO ..> Conexion : Singleton


Restaurante --> PedidoController : instancia y gestiona
Restaurante --> PlatoController : instancia y gestiona
Restaurante --> Sistema : inicia interfaz

Sistema --> Restaurante : inicia aplicación

@enduml